--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,8 +46,11 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "twine >=3.3.0",
-    "black >=20.8b1",
-    "ipython >=7.0"
+    "black >=23.7.0",
+    "flake8 >=6.0.0",
+    "ipython >=7.0",
+    "isort >=5.12.0",
+    "pycln >=2.1.3",
 ]
 test = [
     "pytest >=6.2.1",
